@@ -1,5 +1,9 @@
 2005-05-11  Sam Steingold  <sds@gnu.org>
 
+	* path.tst: check that we can compile files in ansi mode
+
+2005-05-11  Sam Steingold  <sds@gnu.org>
+
 	* conditions.tst: check that READER-ERROR has slot :STREAM
 
 2005-05-10  Sam Steingold  <sds@gnu.org>
