@@ -1,3 +1,8 @@
+2005-05-12  Sam Steingold  <sds@gnu.org>
+
+	* io.d (pr_orecord): enable saving pathnames into *.fas files even
+	when *PRINT-PATHNAMES-ANSI* is non-NIL
+
 2005-05-11  Sam Steingold  <sds@gnu.org>
 
 	* utils/clispload.lsp (*expected-failures*): added DISASSEMBLE.ERROR.3:
